Added 'after' parameter to some Reply routes
- Added search for replies after a given date-time
- Fixed import formatting
