# api.yml
@@ -591,6 +591,12 @@ paths:
           required: false
           schema:
             type: integer
+        - name: after
+          in: query
+          required: false
+          schema:
+            type: string
+            format: date-time
       responses:
         '200':
           description: Success
